--- a/package.json
+++ b/package.json
@@ -28,9 +28,7 @@
     "jsdoc": "^3.6.4"
   },
   "dependencies": {
-    "@hapi/joi": "^17.1.1",
-    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "helmet": "^3.23.3"
+    "joi": "^17.1.1"
   }
 }
