--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "arbol",
   "version": "0.11.0",
   "description": "A web framework born of my usage of express, joi, and other existing technologies. This description will get better when I actually have something built and decide what all of the details will be.",
-  "main": "build/index.js",
+  "main": "index.js",
   "scripts": {},
   "repository": {
     "type": "git",
